# OpenGL_Practice

./: CMakeLists.txt
assets/shaders/: Standard.frag  Standard.vert
lib/assimp/: assimp-vc143-mtd.lib
src/: main.cpp
src/App/: App.cpp  App.h
src/Scene/: Camera.cpp  Camera.h  MainScene.cpp  MainScene.h  Scene.cpp  Scene.h
src/Utilty/: MathHelper.h  Path.h  RenderStructure.cpp  RenderStructure.h  Shader.h
src/Window/: ControlWindow.cpp  ControlWindow.h
